Cleanup
- Changed all `String.format` to `formatted`
- Changed lambda filters to `class::isInstance` where applicable
- Ran formatting on every file
- Removed unused imports
- Iterating the vertical slab map instead of the whole block registry when going through all vertical slabs